# python-django-developer-project-52

./: README.md
hexlet-code/: .env  .gitignore  Makefile  db.sqlite3  pyproject.toml  requirements.txt 
hexlet-code/task_manager/: settings.py  urls.py  views.py  wsgi.py
hexlet-code/task_manager/labels/: forms.py  urls.py  views.py
hexlet-code/task_manager/labels/migrations/: 0001_initial.py
hexlet-code/task_manager/locale/ru/LC_MESSAGES/: django.mo  django.po
hexlet-code/task_manager/statuses/: forms.py  models.py  urls.py  views.py
hexlet-code/task_manager/statuses/migrations/: 0002_initial.py
hexlet-code/task_manager/tasks/: filters.py  forms.py  models.py  urls.py  views.py
hexlet-code/task_manager/tasks/migrations/: 0001_initial.py  0002_alter_task_status.py  0003_alter_task_creator_by_alter_task_executor.py  0004_alter_task_status.py  0005_tasklabel_task_labels.py
hexlet-code/task_manager/templates/: base.html  index.html  locale.html
hexlet-code/task_manager/templates/labels/: create.html  delete.html  index.html  update.html
hexlet-code/task_manager/templates/statuses/: create.html  delete.html  index.html  update.html
hexlet-code/task_manager/templates/tasks/: create.html  delete.html  detail.html  index.html  update.html
hexlet-code/task_manager/templates/users/: create.html  index.html  login.html  update.html
hexlet-code/task_manager/users/: forms.py  tests.py  urls.py  views.py
hexlet-code/tests/user/: test_user_create_page.py
