[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Stas Ardashev <ardashev@intaro.email>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.1"
python-dotenv = "^1.0.0"
dj-database-url = "^2.1.0"
gunicorn = "^21.2.0"
psycopg2-binary = "^2.9.9"
asgiref = "^3.7.2"
django-bootstrap5 = "^23.4"
whitenoise = "^5.3.0"
pytest = "^7.4.4"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-django = "^4.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"